<resources>
    <string name="app_name">Darts Counter</string>
    <string name="bull">BULL</string>
    <string name="miss">MISS</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="stats">Show statistics</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="add_player">Add player</string>
    <string name="remove_player">Remove player %s?</string>
    <string name="stat1">Averages</string>
    <string name="stat2">Scores</string>
    <string name="stat3">Other</string>
    <string name="undo">Undo last input</string>
    <string name="cancel">Cancel</string>
    <string name="not_enough_players">One or more players are missing</string>
    <string name="appearance">Appearance</string>
    <string name="language">Language</string>
    <string name="language_setting">Change the language</string>
    <string name="color_setting">Color of the app</string>
    <string name="lang_restart">You have to restart the Application to apply these settings</string>
    <string name="save_game">Save game</string>
    <string name="share_game">Share game</string>
    <string name="main_menu">Back to main menu</string>
    <string name="winner_text">%1s has won the game!</string>
    <string name="end_match">End match?</string>
    <string name="points_player1">Points player 1</string>
    <string name="points_player2">Points player 2</string>
    <string name="mode">Gamemode</string>
    <string name="global_average">Global average</string>
    <string name="average_d1">Average dart one</string>
    <string name="average_d2">Average dart two</string>
    <string name="average_d3">Average dart three</string>
    <string name="highest_score">Highest Score</string>
    <string name="highest_finish">Highest Finish</string>
    <string name="games_played">Games played</string>
    <string name="games_won">Games won</string>
    <string name="handicap">Enable Handicap</string>
    <string name="points">Points</string>
    <string name="perfect_game">Perfect Games</string>
    <string name="save_location" translatable="false">saved_games</string>
    <string name="saved_games">Saved Games</string>
    <string name="score_70">70+ Scores</string>
    <string name="score_90">90+ Scores</string>
    <string name="score_130">130+ Scores</string>
    <string name="ton_outs">Ton+ Outs</string>
    <string name="most_frequent">Most frequent opponent</string>
    <string name="delete_match">Delete this match?</string>

    <string-array name="gamemodes">
        <item>301</item>
        <item>501</item>
        <item>701</item>
        <item>1001</item>
    </string-array>
    
    <string-array name="X01_modes">
        <item>Double-Out</item>
        <item>Single-Out</item>
        <item>Master-Out</item>
        <item>Double-In</item>
        <item>Triple-In</item>
    </string-array>
</resources>