<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="appearance"
        app:title="@string/appearance">
    <ListPreference
        android:key="color_setting"
        android:title="@string/color_setting"
        android:defaultValue="0"
        android:entries="@array/color_scheme"
        android:entryValues="@array/color_scheme_values"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="language"
        app:title="@string/language">
    <ListPreference
        android:key="language_setting"
        android:title="@string/language_setting"
        android:defaultValue="0"
        android:entries="@array/languages"
        android:entryValues="@array/language_values"/>
    </PreferenceCategory>

</PreferenceScreen>