<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/finish_fragment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:layout_gravity="center"
    android:orientation="vertical"  >

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/save_game"
        android:onClick="onSaveGameRadioButtonClicked"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:text="@string/share_game"
        android:onClick="onShareGameButtonClicked"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:text="@string/main_menu"
        android:onClick="onBackToMainButtonClicked"/>

</LinearLayout>
