<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/main_toolbar"
        android:background="@color/colorPrimary"
        app:titleTextColor="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:id="@+id/player_selection">

        <com.kuehnkroeger.dartscounter.ui.PlayerDropdownTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/select_player_left"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:lines="1"
            android:completionThreshold="0"
            android:hint="@string/player1"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/add_player"
            android:src="@drawable/add"
            android:background="@android:color/transparent"
            android:importantForAccessibility="no" />

        <com.kuehnkroeger.dartscounter.ui.PlayerDropdownTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/select_player_right"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:lines="1"
            android:completionThreshold="0"
            android:hint="@string/player2"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/handicap"
        app:layout_constraintBottom_toBottomOf="@id/handicap"
        android:layout_marginStart="5dp"
        android:textColor="#000000"
        android:text="@string/handicap"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_selection"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/handicap" />

    <!-- Layout for game without handicap -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/handicap"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/mode_description"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/points" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/mode" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/mode_description"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/mode_selection"
        android:orientation="horizontal">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/points" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/X01_mode" />

    </LinearLayout>

    <!-- Layout for game with handicap -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/handicap"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/mode_description_hc"
        android:visibility="invisible"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/points_player1" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/mode" />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="@string/points_player2" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/mode_description_hc"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/mode_selection_hc"
        android:visibility="invisible"
        android:orientation="horizontal">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:id="@+id/points_left_hc" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/X01_mode_hc" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:id="@+id/points_right_hc" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mode_selection"
        android:layout_marginTop="50dp"
        android:id="@+id/play"
        android:text="@string/play" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/saved_games"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:text="@string/saved_games" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/saved_games"/>

</androidx.constraintlayout.widget.ConstraintLayout>